fixed alignment

--- a/css/howitworks.css
+++ b/css/howitworks.css
@@ -118,7 +118,7 @@ a:visited {
     height: 640px;
     flex-direction: row;
     justify-content: center;
-    margin-left: 200px;
+    margin-left: 150px;
     margin-right: 100px;
    
     
